# playbooks

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SETUP.md  TESTING.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml
prompts/deployment/: canary_rollout_strategy.yaml
src/cli/: __init__.py  main.py
src/playbooks/: __init__.py  library.py
src/playbooks/cli/: main.py
tests/: __init__.py  test_cli.py  test_library.py
