[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playbooks"
dynamic = ["version"]
description = "Battle-tested prompts for infrastructure agents. Like Ansible playbooks, but for AI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Brian Hopkins", email = "btotharye@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "prompts",
    "infrastructure",
    "devops",
    "kubernetes",
    "deployment",
    "cost-optimization",
    "incident-response",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[project.scripts]
playbooks = "playbooks.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/playbooks"]

[tool.hatch.version]
path = "src/playbooks/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/playbooks --cov-report=term-missing -v"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
